# bookmark-cli

./: Cargo.toml  LICENSE  README.md
docs/: deployment.md
src/: bookmark.rs  dao.rs  interaction.rs  main.rs  path.rs  repository.rs  selector.rs  storage.rs  usecase.rs
