[package]
name = "bookmark-cli"
version = "1.2.0"
authors = ["iced-penguin"]
description = "Simple bookmark tool"
license = "MIT"
edition = "2021"
repository = "https://github.com/iced-penguin/bookmark-cli"

[[bin]]
name = "bm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
console = "0.15.8"
mockall = "0.13.0"

[dev-dependencies]
rstest = "0.22.0"
